--- a/action.yml
+++ b/action.yml
@@ -6,6 +6,7 @@ description: Plan and apply Terraform/OpenTofu via PR automation, using best pra
 runs:
   using: composite
   steps:
+    # Check
     - shell: bash
       run: |
         # Check for required tools.
@@ -17,6 +18,7 @@ runs:
         if [[ "${{ inputs.plan-encrypt }}" ]]; then which openssl > /dev/null 2>&1 || { echo "Please install openssl before running this action as it is required for plan file encryption."; exit 1; }; fi
         if [[ "${{ inputs.plan-parity }}" ]]; then which diff > /dev/null 2>&1 || { echo "Please install diff before running this action as it is required for comparing plan file parity."; exit 1; }; fi
 
+    # Arguments
     - id: arg
       shell: bash
       run: |
@@ -69,6 +71,7 @@ runs:
         echo arg-write=$([[ -n "${{ inputs.arg-write }}" ]] && echo " -write=${{ inputs.arg-write }}" || echo "") >> "$GITHUB_OUTPUT"
         echo arg-workspace=$([[ -n "${{ inputs.arg-workspace }}" ]] && echo " -workspace=${{ inputs.arg-workspace }}" || echo "") >> "$GITHUB_OUTPUT"
 
+    # Identifier
     - id: identifier
       env:
         GH_MATRIX: ${{ toJSON(matrix) }}
@@ -113,6 +116,7 @@ runs:
         workflow_step=$(echo "$workflow_run" | jq --raw-output --arg job_id "$job_id" '.jobs[] | select(.id == ($job_id | tonumber)) | .steps[] | select(.status == "in_progress") | .number')
         echo "step=$workflow_step" >> "$GITHUB_OUTPUT"
 
+    # Format
     - if: ${{ inputs.format == 'true' }}
       id: format
       shell: bash
@@ -123,6 +127,7 @@ runs:
         echo "${{ inputs.tool }} fmt${{ steps.arg.outputs.arg-chdir }}${args}" | sed 's/ -/\n -/g' > tf.command.txt
         ${{ inputs.tool }}${{ steps.arg.outputs.arg-chdir }} fmt${args} 2> >(tee tf.console.txt) > >(tee tf.console.txt)
 
+    # Initialize
     - if: ${{ contains(fromJSON('["plan", "apply", "init"]'), inputs.command) }}
       id: initialize
       shell: bash
@@ -131,8 +136,10 @@ runs:
         trap 'exit_code="$?"; echo "exit_code=$exit_code" >> "$GITHUB_OUTPUT"' EXIT
         args="${{ steps.arg.outputs.arg-backend-config }}${{ steps.arg.outputs.arg-backend }}${{ inputs.tool == 'tofu' && steps.arg.outputs.arg-var-file || '' }}${{ inputs.tool == 'tofu' && steps.arg.outputs.arg-var || '' }}${{ steps.arg.outputs.arg-force-copy }}${{ steps.arg.outputs.arg-from-module }}${{ steps.arg.outputs.arg-get }}${{ steps.arg.outputs.arg-lock-timeout }}${{ steps.arg.outputs.arg-lock }}${{ steps.arg.outputs.arg-lockfile }}${{ steps.arg.outputs.arg-migrate-state }}${{ steps.arg.outputs.arg-plugin-dir }}${{ steps.arg.outputs.arg-reconfigure }}${{ steps.arg.outputs.arg-test-directory }}${{ steps.arg.outputs.arg-upgrade }}"
         echo "${{ inputs.tool }} init${{ steps.arg.outputs.arg-chdir }}${args}" | sed 's/ -/\n -/g' > tf.command.txt
+        if [[ "${{ inputs.tenv-use }}" ]]; then tenv ${{ inputs.tool }} use ${{ inputs.tenv-version }}; fi
         ${{ inputs.tool }}${{ steps.arg.outputs.arg-chdir }} init${args} 2> >(tee tf.console.txt) > >(tee tf.console.txt)
 
+    # Workspace
     - if: ${{ inputs.arg-workspace != '' && contains(fromJSON('["plan", "apply", "init"]'), inputs.command) }}
       id: workspace
       shell: bash
@@ -143,6 +150,7 @@ runs:
         echo "${{ inputs.tool }} workspace select${{ steps.arg.outputs.arg-chdir }}${args}" | sed 's/ -/\n -/g' > tf.command.txt
         ${{ inputs.tool }}${{ steps.arg.outputs.arg-chdir }} workspace select${args} 2> >(tee tf.console.txt) > >(tee tf.console.txt)
 
+    # Validate
     - if: ${{ inputs.validate == 'true' && contains(fromJSON('["plan", "apply", "init"]'), inputs.command) }}
       id: validate
       shell: bash
@@ -153,6 +161,7 @@ runs:
         echo "${{ inputs.tool }} validate${{ steps.arg.outputs.arg-chdir }}${args}" | sed 's/ -/\n -/g' > tf.command.txt
         ${{ inputs.tool }}${{ steps.arg.outputs.arg-chdir }} validate${args} 2> >(tee tf.console.txt) > >(tee tf.console.txt)
 
+    # Label PR
     - if: ${{ inputs.label-pr == 'true' && steps.identifier.outputs.pr != 0 && contains(fromJSON('["plan", "apply"]'), inputs.command) }}
       continue-on-error: true
       shell: bash
@@ -163,18 +172,36 @@ runs:
           gh api /repos/{owner}/{repo}/labels --header "$GH_API" --method POST --field "name=tf:${{ inputs.command }}" --field "description=Pull requests that ${{ inputs.command }} TF code." --field "color=5C4EE5"
         gh api /repos/{owner}/{repo}/issues/${{ steps.identifier.outputs.pr }}/labels --header "$GH_API" --method POST --field "labels[]=tf:${{ inputs.command }}"
 
+    # Plan
     - if: ${{ inputs.command == 'plan' }}
       id: plan
+      name: Plan
       shell: bash
       run: |
         # TF plan.
         trap 'exit_code="$?"; echo "exit_code=$exit_code" >> "$GITHUB_OUTPUT"; if [[ "$exit_code" == "2" ]]; then exit 0; fi' EXIT
         args="${{ steps.arg.outputs.arg-destroy }}${{ steps.arg.outputs.arg-var-file }}${{ steps.arg.outputs.arg-var }}${{ steps.arg.outputs.arg-compact-warnings }}${{ steps.arg.outputs.arg-concise }}${{ steps.arg.outputs.arg-detailed-exitcode }}${{ steps.arg.outputs.arg-generate-config-out }}${{ steps.arg.outputs.arg-lock-timeout }}${{ steps.arg.outputs.arg-lock }}${{ steps.arg.outputs.arg-parallelism }}${{ steps.arg.outputs.arg-refresh-only }}${{ steps.arg.outputs.arg-refresh }}${{ steps.arg.outputs.arg-replace }}${{ steps.arg.outputs.arg-target }} -out=tfplan"
         echo "${{ inputs.tool }} plan${{ steps.arg.outputs.arg-chdir }}${args}" | sed 's/ -/\n -/g' > tf.command.txt
+        
+        case ${{ inputs.tool }} in
+          terramate)
+            terramate script run \
+              --parallel ${{ terramate-parallel }} \
+              --continue-on-error ${{ terramate-continue-on-error }} \
+              plan 2> >(tee tf.console.txt) > >(tee tf.console.txt)
+            ;;
+          terraform)
+          tofu)
+          *)
+            ${{ inputs.tool }}${{ steps.arg.outputs.arg-chdir }} plan${args} 2> >(tee tf.console.txt) > >(tee tf.console.txt)
+            ;;
+        esac
         ${{ inputs.tool }}${{ steps.arg.outputs.arg-chdir }} plan${args} 2> >(tee tf.console.txt) > >(tee tf.console.txt)
 
+    # Download
     - if: ${{ inputs.command == 'apply' && inputs.arg-auto-approve != 'true' }}
       id: download
+      name: Download
       shell: bash
       run: |
         # Download plan file.
@@ -186,7 +213,9 @@ runs:
         unzip "${{ steps.identifier.outputs.name }}.zip" -d "${{ inputs.arg-chdir || inputs.working-directory }}"
         rm --force "${{ steps.identifier.outputs.name }}.zip"
 
+    # Decrypt
     - if: ${{ inputs.plan-encrypt != '' && steps.download.outcome == 'success' }}
+      name: Decrypt
       env:
         pass: ${{ inputs.plan-encrypt }}
         path: ${{ format('{0}{1}tfplan', inputs.arg-chdir || inputs.working-directory, (inputs.arg-chdir || inputs.working-directory) && '/' || '') }}
@@ -198,7 +227,9 @@ runs:
         openssl enc -aes-256-ctr -pbkdf2 -salt -in "$path" -out "$path.decrypted" -pass file:"$temp_file" -d
         mv "$path.decrypted" "$path"
 
+    # Show
     - if: ${{ steps.plan.outcome == 'success' || steps.download.outcome == 'success' }}
+      name: Show
       shell: bash
       run: |
         # TF show.
@@ -213,7 +244,9 @@ runs:
           -e 's/^  # \(.* be read\)/~ \1/' \
           -e 's/^  # \(.*\)/# \1/' > tf.diff.txt || true
 
+    # Encrypt
     - if: ${{ inputs.plan-encrypt != '' && steps.plan.outcome == 'success' }}
+      name: Encrypt
       env:
         pass: ${{ inputs.plan-encrypt }}
         path: ${{ format('{0}{1}tfplan', inputs.arg-chdir || inputs.working-directory, (inputs.arg-chdir || inputs.working-directory) && '/' || '') }}
@@ -225,6 +258,7 @@ runs:
         openssl enc -aes-256-ctr -pbkdf2 -salt -in "$path" -out "$path.encrypted" -pass file:"$temp_file"
         mv "$path.encrypted" "$path"
 
+    # Upload
     - if: ${{ inputs.command == 'plan' && github.server_url == 'https://github.com' }}
       id: upload
       uses: actions/upload-artifact@65c4c4a1ddee5b72f698fdd19549f0f0fb45cf08 # v4.6.0
@@ -234,6 +268,7 @@ runs:
         retention-days: ${{ inputs.retention-days }}
         overwrite: true
 
+    # Upload v3
     - if: ${{ inputs.command == 'plan' && github.server_url != 'https://github.com' }}
       id: upload-v3
       uses: actions/upload-artifact@c24449f33cd45d4826c6702db7e49f7cdb9b551d # v3.2.1-node20
@@ -242,20 +277,33 @@ runs:
         path: ${{ format('{0}{1}tfplan', inputs.arg-chdir || inputs.working-directory, (inputs.arg-chdir || inputs.working-directory) && '/' || '') }}
         retention-days: ${{ inputs.retention-days }}
 
+    # Parity
     - if: ${{ inputs.plan-parity == 'true' && steps.download.outcome == 'success' }}
       shell: bash
       run: |
         # TF plan parity.
         # Generate a new plan file, then compare it with the previous one.
         # Both plan files are normalized by sorting JSON keys, removing timestamps and ${{ steps.arg.outputs.arg-detailed-exitcode }} to avoid false-positives.
-        ${{ inputs.tool }}${{ steps.arg.outputs.arg-chdir }} plan${{ steps.arg.outputs.arg-destroy }}${{ steps.arg.outputs.arg-var-file }}${{ steps.arg.outputs.arg-var }}${{ steps.arg.outputs.arg-compact-warnings }}${{ steps.arg.outputs.arg-concise }}${{ steps.arg.outputs.arg-generate-config-out }}${{ steps.arg.outputs.arg-lock-timeout }}${{ steps.arg.outputs.arg-lock }}${{ steps.arg.outputs.arg-parallelism }}${{ steps.arg.outputs.arg-refresh-only }}${{ steps.arg.outputs.arg-refresh }}${{ steps.arg.outputs.arg-replace }}${{ steps.arg.outputs.arg-target }} -out=tfplan.parity
-        ${{ inputs.tool }}${{ steps.arg.outputs.arg-chdir }} show -json tfplan.parity | jq --sort-keys 'del(.timestamp)' > tfplan.new
-        ${{ inputs.tool }}${{ steps.arg.outputs.arg-chdir }} show -json tfplan | jq --sort-keys 'del(.timestamp)' > tfplan.old
+        case ${{ inputs.tool }} in
+          terraform) 
+          tofu)
+          *)
+            ${{ inputs.tool }}${{ steps.arg.outputs.arg-chdir }} \
+              plan${{ steps.arg.outputs.arg-destroy }}${{ steps.arg.outputs.arg-var-file }}${{ steps.arg.outputs.arg-var }}${{ steps.arg.outputs.arg-compact-warnings }}${{ steps.arg.outputs.arg-concise }}${{ steps.arg.outputs.arg-generate-config-out }}${{ steps.arg.outputs.arg-lock-timeout }}${{ steps.arg.outputs.arg-lock }}${{ steps.arg.outputs.arg-parallelism }}${{ steps.arg.outputs.arg-refresh-only }}${{ steps.arg.outputs.arg-refresh }}${{ steps.arg.outputs.arg-replace }}${{ steps.arg.outputs.arg-target }} \
+              -out=tfplan.parity
+        
+            ${{ inputs.tool }}${{ steps.arg.outputs.arg-chdir }} show -json tfplan.parity | jq --sort-keys 'del(.timestamp)' > tfplan.new
+        
+            ${{ inputs.tool }}${{ steps.arg.outputs.arg-chdir }} show -json tfplan | jq --sort-keys 'del(.timestamp)' > tfplan.old
+            ;;
+        esac
+          
 
         # If both plan files are identical, then replace the old plan file with the new one to prevent avoidable stale apply.
         diff tfplan.new tfplan.old && mv "${{ format('{0}{1}tfplan.parity', inputs.arg-chdir || inputs.working-directory, (inputs.arg-chdir || inputs.working-directory) && '/' || '') }}" "${{ format('{0}{1}tfplan', inputs.arg-chdir || inputs.working-directory, (inputs.arg-chdir || inputs.working-directory) && '/' || '') }}"
         rm --force tfplan.new tfplan.old "${{ format('{0}{1}tfplan.parity', inputs.arg-chdir || inputs.working-directory, (inputs.arg-chdir || inputs.working-directory) && '/' || '') }}"
 
+    # Apply
     - id: apply
       if: ${{ inputs.command == 'apply' }}
       shell: bash
@@ -266,16 +314,17 @@ runs:
         if [[ "${{ inputs.arg-auto-approve }}" == "true" ]]; then
           plan="${{ steps.arg.outputs.arg-auto-approve }}"
           var_file="${{ steps.arg.outputs.arg-var-file }}"
-          var="${{ steps.arg.outputs.arg-var }}"
+          var="${{ steps.arg.outputs.arg-var }}"        
         else
           plan=" tfplan"
           var_file=""
           var=""
         fi
         args="${{ steps.arg.outputs.arg-destroy }}${var_file}${var}${{ steps.arg.outputs.arg-backup }}${{ steps.arg.outputs.arg-compact-warnings }}${{ steps.arg.outputs.arg-concise }}${{ steps.arg.outputs.arg-lock-timeout }}${{ steps.arg.outputs.arg-lock }}${{ steps.arg.outputs.arg-parallelism }}${{ steps.arg.outputs.arg-refresh-only }}${{ steps.arg.outputs.arg-refresh }}${{ steps.arg.outputs.arg-replace }}${{ steps.arg.outputs.arg-state-out }}${{ steps.arg.outputs.arg-state }}${{ steps.arg.outputs.arg-target }}${plan}"
-        echo "${{ inputs.tool }} apply${{ steps.arg.outputs.arg-chdir }}${args}" | sed 's/ -/\n -/g' > tf.command.txt
+        echo "${{ inputs.tool }} apply${{ steps.arg.outputs.arg-chdir }}${args}" | sed 's/ -/\n -/g' > tf.command.txt        
         ${{ inputs.tool }}${{ steps.arg.outputs.arg-chdir }} apply${args} 2> >(tee tf.console.txt) > >(tee tf.console.txt)
 
+    # Post
     - id: post
       if: ${{ !cancelled() && steps.identifier.outcome == 'success' && contains(fromJSON('["plan", "apply", "init"]'), inputs.command) }}
       env:
@@ -507,6 +556,26 @@ inputs:
   tag-actor:
     default: "always"
     description: "Tag the workflow triggering actor: `always`, `on-change`, or `never` (e.g., `always`)."
+    required: false
+  terramate-override-workflow:
+    default: false
+    description: "Use the default workflow in the TF-via-PR action repo"
+    required: false
+  terramate-parallel:
+    default: 1
+    description: "Integer number of parallel runs for terramate (e.g., `1`)."
+    required: false
+  terramate-continue-on-error:
+    default: true
+    description: "Continue on error for terramate (e.g., `true`)."
+    required: false
+  tenv-use:
+    default: false
+    description: "Use tenv to manage terraform or tofu versions."
+    required: false
+  tenv-version:
+    default: "min-required"
+    description: "Specify the version of terraform or tofu to use."
     required: false
   token:
     default: ${{ github.token }}
